select wrap and add goals next btn fix

--- a/src/app.scss
+++ b/src/app.scss
@@ -357,15 +357,44 @@ input {
     }
   }
 }
-.Select-Wrap {
+.Goal-Select-Wrap {
   border: 2px solid #6680D1;
+  border-radius: 100px;
+  position: relative;
+  display: block;
   .ant-select {
     color: #6680D1 !important;
+    padding: 0;
+    width: 100%;
+    font-size: 20px !important;
+    line-height: 24px !important;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    display: block !important;
+    height: 64px;
 
     .ant-select-selection-placeholder {
       color: #6680D1;
     }
 
+    &:not(.ant-select-customize-input) {
+      .ant-select-selector {
+        border: none;
+        display: inline-block;
+        padding: 17px 40px;
+        border-radius: 100px;
+        height: 100%;
+
+        &::after {
+          display: none;
+        }
+      }
+      .ant-select-selection-search-input {
+        height: 100% !important;
+        padding: 17px 30px 17px 40px !important;
+      }
+    }
+    
     &.ant-select-focused {
       &:not(.ant-select-disabled) {
         &:not(.ant-select-customize-input) {
@@ -380,13 +409,20 @@ input {
   }
 
   .anticon {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 1;
     color: #6680D1;
-    
+
     &.anticon-search {
+      left: 20px;
       font-size: 22px;
     }
+
     &.anticon-down {
       font-size: 18px;
+      right: 20px;
     }
   }
 }
